# dog

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
completions/: dog.bash  dog.fish  dog.ps1  dog.zsh
dns/: Cargo.toml
dns-transport/: Cargo.toml
dns-transport/src/: error.rs  https.rs  tcp.rs  tls.rs  tls_stream.rs  udp.rs
dns/src/: strings.rs
dns/src/record/: openpgpkey.rs
man/: dog.1.md
src/: localize.rs  main.rs  options.rs  output.rs  resolve.rs
