[package]
name = "dns-transport"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false
test = false


[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# http response parsing
httparse = { version = "1.3", optional = true }

# rustls (pure Rust TLS)
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "tls12"] }

webpki-roots = { version = "0.26", optional = true }

cfg-if = "1"

[features]
default = []  # these are enabled in the main dog crate

with_tls   = []
with_https = ["httparse"]

with_rustls = ["rustls", "webpki-roots"]
