[package]
name = "dns"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false


[dependencies]

# logging
log = "0.4"

# protocol parsing helper
byteorder = "1.5"

# printing of certain packets
base64 = "0.22"

# idna encoding
idna = { version = "1", optional = true }

# mutation testing
mutagen = { git = "https://github.com/llogiq/mutagen", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []  # idna is enabled in the main dog crate
with_idna = ["idna"]
with_mutagen = ["mutagen"]  # needs nightly
